# nlp_with_bigdata

./: CLAUDE.md  README.md  pyproject.toml  report.html  tokenizer_comparison.ipynb
data/: test.txt
models/: bpe_merges_full.pkl  bpe_vocab_full.pkl  wp_merges_full.pkl  wp_vocab_full.pkl
models/bpe_100pct/: tokenizer.json
models/bpe_10pct/: tokenizer.json
models/bpe_50pct/: tokenizer.json
models/wordpiece_100pct/: tokenizer.json
models/wordpiece_10pct/: tokenizer.json
models/wordpiece_50pct/: tokenizer.json
models/wp_100pct/: tokenizer.json
models/wp_10pct/: tokenizer.json
models/wp_50pct/: tokenizer.json
