[project]
name = "nlp-with-bigdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.7.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "konlpy>=0.6.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "python-mecab-ko>=1.3.7",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
]
